syntax = "proto3";

package ai_service;

// Request message for Health
message HealthRequest {
}

// Note generation request
message NoteGenerationRequestItem {
    string id = 1;
    string label = 2;
    string guide = 3;
    string sample = 4;
}

message NoteGenerationRequest {
    repeated NoteGenerationRequestItem items = 1;
}
