syntax = "proto3";

package ai_service;

// Response message for Health
message HealthResponse {
    string message = 1;
}

// Note generation response
message NoteGenerationResponseItem {
    string id = 1;
    string label = 2;
    string value = 3;
}

message NoteGenerationResponse {
    repeated NoteGenerationResponseItem items = 1;
}